--- a/src/styles/about-us.scss
+++ b/src/styles/about-us.scss
@@ -18,16 +18,6 @@
         margin-bottom: 20px;
     }
 }
-.about-us{
-    &__content{
-        padding: 100px 0 105px;
-    }
-    &__best-features{
-        @include flex(space-between);
-        margin-top: 100px;
-    }
-}
-
 .our-team{
     background-color: $whitesmoke-color;
     &__content{
@@ -37,8 +27,9 @@
         @include flex(space-evenly);
         margin-top: 40px;
         .teammate{
-            flex-basis: 300px;
+            flex-basis: 299px;
             margin-right: 15px;
+            padding-bottom: 10px;
             &__photo{
                 background-size: cover;
                 height: 180px;
@@ -58,12 +49,14 @@
                 font-family: "RobotoMedium";
                 color: rgb(15, 95, 92);
                 line-height: 1.467;
+                margin-left: 10px;
             }
             &__position{
                 font-size: 14px;
                 font-family: "RobotoRegular";
                 color: rgb(131, 167, 165);
                 line-height: 1.571;
+                margin-left: 10px;
             }     
         }
         .teammate:last-child{
